crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/030.cypher
MATCH (n) WHERE n.x = 1 RETURN n; RETURN 1
